--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,14 @@
-# This is a basic workflow to help you get started with Actions
+# Runs the Gradle build action for CI
 
-name: Gradle CI
+name: Gradle Build
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-  # Allows this workflow to be run manually from the Actions tab
+  # Allow this workflow to be run manually from the Actions tab
   workflow_dispatch:
 
 jobs:
