--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,12 @@
 # suppress inspection "UnusedProperty" for whole file
-org.gradle.parallel=true
+
+# Enable parallel builds
+org.gradle.parallel = true
+
+# Define library versions
+hamcrestVersion = 2.2
+jacocoVersion = 0.8.7
+javaVersion = 11
+junitVersion = 5.8.0
+kotlinVersion = 1.5.31
+lombokVersion = 1.18.22
