Gradle config improvements

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,12 @@
 # suppress inspection "UnusedProperty" for whole file
 
-# Enable parallel builds
+# Build optimizations
+org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-XX:+UseParallelGC
 org.gradle.parallel=true
 
-# Define library versions
+# Library versions
 hamcrestVersion=2.2
 jacocoVersion=0.8.7
 javaVersion=11
