Update SDK and library versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,10 @@ org.gradle.caching=true
 org.gradle.parallel=true
 
 # Library versions
+coroutinesVersion=1.6.4
 hamcrestVersion=2.2
-jacocoVersion=0.8.7
-javaVersion=11
-junitVersion=5.8.0
-kotlinVersion=1.5.31
-lombokVersion=1.18.22
+jacocoVersion=0.8.8
+javaVersion=17
+junitVersion=5.9.0
+kotlinVersion=1.6.21
+lombokVersion=1.18.24
