--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
-# Runs the Gradle build action for CI
+# Runs the Gradle build action and uploads a coverage report to codecov.io
 
 name: build
 
 on:
   push:
     branches: [ master ]
+
   pull_request:
     branches: [ master ]
 
@@ -15,20 +16,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Java 17
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Build with Gradle
-        run: ./gradlew build
-      - name: Clean up Gradle cache
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+          distribution: temurin
+          java-version: 17
+
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Run Gradle build
+        run: ./gradlew :build :codeCoverageReport
+
+      - name: Upload Codecov report
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml
+          fail_ci_if_error: true
