--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
-# Gradle performance optimizations
+# Performance optimizations
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.unsafe.configuration-cache=true
+
+# Show compatibility warnings
+org.gradle.warning.mode=all
