--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Run Gradle tasks
-        run: ./gradlew :koverMergedXmlReport
+        run: ./gradlew :build :koverMergedXmlReport
 
       - name: Upload Codecov report
         uses: codecov/codecov-action@v3
