--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,9 @@ jobs:
         run: ./gradlew build koverXmlReport --rerun-tasks
 
       - name: Upload Codecov report
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4.2.0
         with:
           files: ./build/reports/kover/report.xml
           fail_ci_if_error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
